manual/v1.3.0/en/html/_sources/about/info.rst.txt
Overview
=================
TeNeS (**Te** nsor **Ne** twork **S** olver) is an open-source program package for calculation of two-dimensional many-body quantum states based on the tensor network method.
This package calculates ground-state wavefunctions for user-defined Hamiltonian, and evaluates user-defined physical quantities such as magnetization and correlation functions.
For predefined models and lattices, there is a tool that makes it easy for users to generate input files.
TeNeS uses an OpenMP/MPI hybrid parallelized tensor operation library and thus can deal with large-scale calculation by using massively parallel machines.

Developers
==================
TeNeS is developed by the following members.

- Tsuyoshi Okubo (Graduate School of Science, Univ. of Tokyo)
- Satoshi Morita (Institute for Solid State Physics, Univ. of Tokyo)
- Yuichi Motoyama (Institute for Solid State Physics, Univ. of Tokyo)
- Kazuyoshi Yoshimi (Institute for Solid State Physics, Univ. of Tokyo)
- Takeo Kato (Institute for Solid State Physics, Univ. of Tokyo)
- Naoki Kawashima (Institute for Solid State Physics, Univ. of Tokyo)

Version information
======================

- ver. 1.3.0: 2022-10-20.
- ver. 1.2.0: 2021-12-13.
- ver. 1.1.1: 2020-11-09.
- ver. 1.1.0: 2020-07-09.
- ver. 1.0.0: 2020-04-17.
- ver. 1.0-beta: 2020-03-30.
- ver. 0.1: 2019-12-04.

License
==================

This package is distributed under GNU General Public License version 3 (GPL v3) or later.

Papers
========

When you publish the results by using TeNeS, we would appreciate if you cite the following paper:

`Y. Motoyama, Tsuyoshi Okubo, Kazuyoshi Yoshimi, Satoshi Morita, Takeo Kato, and Naoki Kawashima, "TeNeS: Tensor Network Solver for Quantum Lattice Systems", Comput. Phys. Commun. 279, 108437 (2022) <https://www.sciencedirect.com/science/article/pii/S0010465522001564>`_

Copyright
==================

© *2019- The University of Tokyo. All rights reserved.*

This software was developed with the support of \"*Project for advancement of software usability in materials science*\" of The Institute for Solid State Physics, The University of Tokyo. 
     
